@@ -7,8 +7,10 @@
     * Added new endpoint /api/connections with JSON response
     * Skipped pidfile when process is not alive
     * Added new endpoint /api/printer with JSON response
-    * Fix complain in wizard about `api-key` when `username` was too short
+    * Fixed complaint in wizard about `api-key` when `username` was too short
     * Fix printer.sn being unset in the wizard by waiting for it
+    * Fixed some telemetry being sent basically at random
+    * Enabled the RESET_PRINTER command
 
 0.2.0 (2020-12-14)
 
